--- a/spotify_quiz/lib/l10n/app_it.arb
+++ b/spotify_quiz/lib/l10n/app_it.arb
@@ -57,7 +57,7 @@
 
   "correctanswerquiz": "Risposta Corretta!",
 
-  "wronganswerquiz": "Risposta sbagliata!",
+  "wronganswerquiz": "Risposta Sbagliata!",
 
   "quitbutton": "Termina",
 
