QuizWithButton and Coins deleted

--- a/spotify_quiz/lib/l10n/app_de.arb
+++ b/spotify_quiz/lib/l10n/app_de.arb
@@ -53,6 +53,8 @@
 
   "playbutton": "Spielen",
 
+  "playbuttonquiz": "Hören",
+
   "gobackbutton": "Zurück zum anfang",
 
   "correctanswerquiz": "Richtige Antwort!",
