--- a/spotify_quiz/lib/l10n/app_es.arb
+++ b/spotify_quiz/lib/l10n/app_es.arb
@@ -53,6 +53,8 @@
 
   "playbutton": "Juegas",
 
+  "playbuttonquiz": "Escucha",
+
   "gobackbutton": "Vaya de regreso",
 
   "correctanswerquiz": "¡Respuesta Correcta!",
