--- a/spotify_quiz/lib/l10n/app_fr.arb
+++ b/spotify_quiz/lib/l10n/app_fr.arb
@@ -53,6 +53,8 @@
 
   "playbutton": "Jouer",
 
+  "playbuttonquiz": "Ecoutes",
+
   "gobackbutton": "Haut de page",
 
   "correctanswerquiz": "Réponse Correcte!",
