--- a/spotify_quiz/lib/l10n/app_it.arb
+++ b/spotify_quiz/lib/l10n/app_it.arb
@@ -53,6 +53,8 @@
 
   "playbutton": "Gioca",
 
+  "playbuttonquiz": "Ascolta",
+
   "gobackbutton": "Torna indietro",
 
   "correctanswerquiz": "Risposta Corretta!",
