--- a/spotify_quiz/lib/l10n/app_ru.arb
+++ b/spotify_quiz/lib/l10n/app_ru.arb
@@ -53,6 +53,8 @@
 
   "playbutton": "Играть",
 
+  "playbuttonquiz": "Cлушай",
+
   "gobackbutton": "Вернуться к началу",
 
   "correctanswerquiz": "Правильный ответ!",
