Ranking Smartphone Logic Done
Remember that I had to change CustomButtonsHome logic

--- a/spotify_quiz/lib/l10n/app_de.arb
+++ b/spotify_quiz/lib/l10n/app_de.arb
@@ -3,7 +3,7 @@
 
   "coins": "Münzen",
 
-  "nofquiz": "#Quiz",
+  "nofquiz": "Quiz N.",
 
   "level": "Ebene",
 
@@ -65,5 +65,9 @@
 
   "continuebutton": "Fortsetzung",
 
-  "scorequiz": "Ergebnis:"
+  "scorequiz": "Ergebnis:",
+
+  "bestScore": "Bestes Ergebnis",
+
+  "experience": "Erfahrung"
 }
