--- a/spotify_quiz/lib/l10n/app_ru.arb
+++ b/spotify_quiz/lib/l10n/app_ru.arb
@@ -45,11 +45,11 @@
 
   "casual": "Случайный",
 
-  "gameinfoartist": "Режим игры по мотивам ваших любимых исполнителей",
+  "gameinfoartist": "Угадай художника по картинке!",
 
-  "gameinfosong": "Игровой режим, основанный на ваших любимых треках",
+  "gameinfosong": "Послушайте песню и угадайте, что это за песня!",
 
-  "gameinfocasual": "Режим игры, основанный на случайных исполнителях и треках",
+  "gameinfocasual": "Микс всех режимов с дополнительными вопросами!",
 
   "playbutton": "Играть",
 
@@ -69,5 +69,8 @@
 
   "bestScore": "Лучший результат",
 
-  "experience": "Oпыт"
+  "experience": "Oпыт",
+
+  "createquiz": "Создание теста..."
+
 }
