Added localization of "creatin your quiz" in quizpage

--- a/spotify_quiz/lib/l10n/app_en.arb
+++ b/spotify_quiz/lib/l10n/app_en.arb
@@ -119,7 +119,7 @@
     "description": "Info box artist mode"
   },
 
-  "gameinfosong": "Listen the song and guess which one is it!"",
+  "gameinfosong": "Listen the song and guess which one is it!",
   "@gameinfosong": {
     "description": "Info box song mode"
   },
