--- a/spotify_quiz/lib/l10n/app_ru.arb
+++ b/spotify_quiz/lib/l10n/app_ru.arb
@@ -49,10 +49,15 @@
 
   "gameinfosong": "Игровой режим, основанный на ваших любимых треках",
 
-  "gameinfocasual": "Режим игры, основанный на случайных исполнителях и треках",
+  "gameinfoalbum": "Игровой режим, основанный на ваших любимых альбомах",
+
+  "gamesarabanda": "Классическая Сарабанда! Свяжите песню с названием",
+
+  "gameinfocasual": "Игровой режим, в котором используются все типы викторин",
 
   "playbutton": "Играть",
-
+  "sarabanda": "Сарабанда",
+  "album": "Альбом",
   "playbuttonquiz": "Cлушай",
 
   "gobackbutton": "Вернуться к началу",
