Event logic + view linked and pseudo complete ( renderOverFlow )

--- a/spotify_quiz/lib/l10n/app_de.arb
+++ b/spotify_quiz/lib/l10n/app_de.arb
@@ -12,9 +12,9 @@
   "events": "Veranstaltungen",
 
   "home": "Home",
-
+  "loadingevents": "Ereignisse werden geladen",
   "quizpage": "Quiz",
-
+  "noevents": "Es sind keine Veranstaltungen verfügbar :(",
   "statistics": "Statistik",
 
   "correctanswer": "Richtige Antworten",
