--- a/spotify_quiz/lib/l10n/app_es.arb
+++ b/spotify_quiz/lib/l10n/app_es.arb
@@ -11,6 +11,8 @@
 
   "events": "Eventos",
 
+  "loadingevents": "Cargando eventos",
+  "noevents": "No hay eventos disponibles :(",
   "home": "Home",
 
   "quizpage": "Quiz",
