--- a/spotify_quiz/lib/l10n/app_ru.arb
+++ b/spotify_quiz/lib/l10n/app_ru.arb
@@ -12,9 +12,9 @@
   "events": "События",
 
   "home": "Home",
-
+  "loadingevents": "Загрузка событий",
   "quizpage": "Quiz",
-
+  "noevents": "Мероприятий нет :(",
   "statistics": "Статистика",
 
   "correctanswer": "Правильные ответы",
