--- a/spotify_quiz/lib/l10n/app_fr.arb
+++ b/spotify_quiz/lib/l10n/app_fr.arb
@@ -14,7 +14,8 @@
   "home": "Home",
   "noevents": "Il n'y a pas d'événements disponibles :(",
   "quizpage": "Quiz",
-
+  "noaccountText":"Notre plateforme nécessite que vous ayez un compte spotify. Vous n'en avez pas encore ? Rendez-vous sur www.spotify.com pour vous inscrire et vous connecter sur SpotiQuiz pour défier vos amis !",
+  "noaccount":"Je n'ai pas de compte spotify",
   "statistics": "Statistiques",
 
   "correctanswer": "Réponses Correctes",
