--- a/spotify_quiz/lib/l10n/app_ru.arb
+++ b/spotify_quiz/lib/l10n/app_ru.arb
@@ -16,7 +16,8 @@
   "quizpage": "Quiz",
   "noevents": "Мероприятий нет :(",
   "statistics": "Статистика",
-
+  "noaccountText":"Наша платформа требует, чтобы у вас была учетная запись Spotify. У вас еще нет? Зайдите на www.spotify.com, чтобы зарегистрироваться и войти в SpotiQuiz, чтобы бросить вызов своим друзьям!",
+  "noaccount":"У меня нет учетной записи Spotify",
   "correctanswer": "Правильные ответы",
 
   "wronganswer": "Неправильные ответы",
