--- a/spotify_quiz/lib/l10n/app_de.arb
+++ b/spotify_quiz/lib/l10n/app_de.arb
@@ -16,6 +16,8 @@
   "quizpage": "Quiz",
   "noevents": "Es sind keine Veranstaltungen verfügbar :(",
   "statistics": "Statistik",
+  "noaccountText": "Für unsere Plattform benötigen Sie ein Spotify-Konto. Sie haben noch keins? Gehen Sie zu www.spotify.com, um sich bei SpotiQuiz zu registrieren und einzuloggen, um Ihre Freunde herauszufordern!",
+  "noaccount":"Ich habe kein Spotify-Konto",
 
   "correctanswer": "Richtige Antworten",
 
