--- a/spotify_quiz/lib/l10n/app_ru.arb
+++ b/spotify_quiz/lib/l10n/app_ru.arb
@@ -14,7 +14,7 @@
   "home": "Home",
   "loadingevents": "Загрузка событий",
   "quizpage": "Quiz",
-  "noevents": "Мероприятий нет :(",
+  "noevents": "Мероприятий нет :",
   "statistics": "Статистика",
   "noaccountText":"Наша платформа требует, чтобы у вас была учетная запись Spotify. У вас еще нет? Зайдите на www.spotify.com, чтобы зарегистрироваться и войти в SpotiQuiz, чтобы бросить вызов своим друзьям!",
   "noaccount":"У меня нет учетной записи Spotify",
@@ -38,7 +38,7 @@
 
   "chooseaquiz": "Выберите викторину!",
 
-  "yourfavartists": "Любимые исполнители",
+  "yourfavartists": "Исполнители, которые вам могут понравиться",
 
   "artist": "Художники",
 
