--- a/spotify_quiz/lib/l10n/app_es.arb
+++ b/spotify_quiz/lib/l10n/app_es.arb
@@ -12,7 +12,7 @@
   "events": "Eventos",
 
   "loadingevents": "Cargando eventos",
-  "noevents": "No hay eventos disponibles :(",
+  "noevents": "No hay eventos disponibles :",
   "home": "Home",
   "noaccountText":"Nuestra plataforma requiere que tengas una cuenta de spotify. ¿Aún no tienes uno? Dirígete a www.spotify.com para registrarte e iniciar sesión en SpotiQuiz para desafiar a tus amigos.",
   "noaccount":"No tengo cuenta de spotify",
@@ -40,7 +40,7 @@
 
   "chooseaquiz": "¡Elige un quiz!",
 
-  "yourfavartists": "Tus artistas favoritos",
+  "yourfavartists": "Artistas que te pueden gustar",
 
   "artist": "Artistas",
 
