--- a/spotify_quiz/lib/l10n/app_it.arb
+++ b/spotify_quiz/lib/l10n/app_it.arb
@@ -12,7 +12,7 @@
   "events": "Eventi",
   "loadingevents": "Caricamento eventi",
   "home": "Home",
-  "noevents": "Non ci sono eventi disponibili :(",
+  "noevents": "Non ci sono eventi disponibili :",
   "quizpage": "Quiz",
   "noaccountText":"La nostra piattaforma richiede di avere un account Spotify. Non ne hai ancora uno? Vai su www.spotify.com per iscriverti e accedi a SpotiQuiz per sfidare i tuoi amici!",
   "noaccount":"Non ho un account Spotify",
@@ -38,7 +38,7 @@
 
   "chooseaquiz": "Scegli un quiz!",
 
-  "yourfavartists": "I tuoi artisti preferiti",
+  "yourfavartists": "Artisti che potrebbero piacerti",
 
   "artist": "Artisti",
 
