Localization and change in fetching artists quiz page

--- a/spotify_quiz/lib/l10n/app_de.arb
+++ b/spotify_quiz/lib/l10n/app_de.arb
@@ -49,10 +49,10 @@
 
   "gameinfoartist": "Erraten Sie den Künstler anhand des Bildes!",
 
-  "gameinfosong": "Hören Sie sich das Lied an und raten Sie, was es ist!",
+  "gameinfosong": "Erraten Sie anhand des Namens, wer das Lied singt!",
 
-  "gameinfoalbum": "Spielemodus, der auf Ihren Lieblingsalben basiert",
-  "gamesarabanda": "Die klassische Sarabande! Verknüpfen Sie das Lied mit dem Titel",
+  "gameinfoalbum": "Erraten Sie das Erscheinungsdatum des Albums!",
+  "gamesarabanda": "Die klassische Sarabande! verknüpfen Sie das Lied mit dem Titel",
 
   "gameinfocasual": "Spielmodus, der alle Arten von Quizzen nutzt",
 
