--- a/spotify_quiz/lib/l10n/app_it.arb
+++ b/spotify_quiz/lib/l10n/app_it.arb
@@ -48,10 +48,10 @@
 
   "gameinfoartist": "Indovina l'artista in base alla sua immagine!",
 
-  "gameinfosong": "Ascolta la canzone e indovina qual é!",
+  "gameinfosong": "Indovina chi canta la canzone!",
 
-  "gameinfoalbum": "Modalità di gioco che si basa sui tuoi album preferiti",
-  "gamesarabanda": "Il classico Sarabanda! Associa il brano al titolo",
+  "gameinfoalbum": "Indovina quando é uscito l'album!",
+  "gamesarabanda": "Il classico Sarabanda! associa il brano al titolo",
 
   "gameinfocasual": "Modalità di gioco che sfrutta tutti i tipi di quiz",
 
