--- a/spotify_quiz/lib/l10n/app_ru.arb
+++ b/spotify_quiz/lib/l10n/app_ru.arb
@@ -48,9 +48,9 @@
 
   "gameinfoartist": "Угадай художника по картинке!",
 
-  "gameinfosong": "Послушайте песню и угадайте, что это за песня!",
+  "gameinfosong": "Угадайте, кто поет песню, по названию!",
 
-  "gameinfoalbum": "Игровой режим, основанный на ваших любимых альбомах",
+  "gameinfoalbum": "Угадай дату выхода альбома!",
 
   "gamesarabanda": "Классическая Сарабанда! Свяжите песню с названием",
 
