--- a/spotify_quiz/lib/l10n/app_es.arb
+++ b/spotify_quiz/lib/l10n/app_es.arb
@@ -79,5 +79,7 @@
 
   "experience": "Experiencia",
 
-  "createquiz": "Creando tu prueba..."
+  "createquiz": "Creando tu prueba...",
+
+  "loginSpotify": "Iniciar sesión con Spotify"
 }
