--- a/spotify_quiz/lib/l10n/app_ru.arb
+++ b/spotify_quiz/lib/l10n/app_ru.arb
@@ -77,6 +77,8 @@
 
   "experience": "Oпыт",
 
-  "createquiz": "Создание теста..."
+  "createquiz": "Создание теста...",
+
+   "loginSpotify": "Войти через Spotify"
 
 }
