--- a/spotify_quiz/lib/l10n/app_de.arb
+++ b/spotify_quiz/lib/l10n/app_de.arb
@@ -77,5 +77,7 @@
 
   "experience": "Erfahrung",
 
-  "createquiz": "Erstellen Sie Ihr Quiz..."
+  "createquiz": "Erstellen Sie Ihr Quiz...",
+
+  "loginSpotify": "Melden Sie sich mit Spotify an"
 }
