--- a/spotify_quiz/lib/l10n/app_fr.arb
+++ b/spotify_quiz/lib/l10n/app_fr.arb
@@ -77,5 +77,7 @@
 
   "experience": "Expérience",
 
-  "createquiz": "Création de votre quizz..."
+  "createquiz": "Création de votre quizz...",
+
+  "loginSpotify": "Connectez-vous avec Spotify"
 }
